// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csharp json snapshot 1`] = `
Object {
  "docs": "The tag mutability setting for your repository.",
  "members": Array [
    Object {
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "allow image tags to be overwritten.",
      "id": "Amazon.CDK.AWS.ECR.TagMutability.MUTABLE",
      "name": "MUTABLE",
    },
    Object {
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "all image tags within the repository will be immutable which will prevent them from being overwritten.",
      "id": "Amazon.CDK.AWS.ECR.TagMutability.IMMUTABLE",
      "name": "IMMUTABLE",
    },
  ],
  "name": "TagMutability",
}
`;

exports[`csharp markdown snapshot 1`] = `
" TagMutability <a name=\\"TagMutability\\"></a>

The tag mutability setting for your repository.

# \`MUTABLE\` <a name=\\"Amazon.CDK.AWS.ECR.TagMutability.MUTABLE\\"></a>

allow image tags to be overwritten.

---


# \`IMMUTABLE\` <a name=\\"Amazon.CDK.AWS.ECR.TagMutability.IMMUTABLE\\"></a>

all image tags within the repository will be immutable which will prevent them from being overwritten.

---

"
`;

exports[`java json snapshot 1`] = `
Object {
  "docs": "The tag mutability setting for your repository.",
  "members": Array [
    Object {
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "allow image tags to be overwritten.",
      "id": "software.amazon.awscdk.services.ecr.TagMutability.MUTABLE",
      "name": "MUTABLE",
    },
    Object {
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "all image tags within the repository will be immutable which will prevent them from being overwritten.",
      "id": "software.amazon.awscdk.services.ecr.TagMutability.IMMUTABLE",
      "name": "IMMUTABLE",
    },
  ],
  "name": "TagMutability",
}
`;

exports[`java markdown snapshot 1`] = `
" TagMutability <a name=\\"TagMutability\\"></a>

The tag mutability setting for your repository.

# \`MUTABLE\` <a name=\\"software.amazon.awscdk.services.ecr.TagMutability.MUTABLE\\"></a>

allow image tags to be overwritten.

---


# \`IMMUTABLE\` <a name=\\"software.amazon.awscdk.services.ecr.TagMutability.IMMUTABLE\\"></a>

all image tags within the repository will be immutable which will prevent them from being overwritten.

---

"
`;

exports[`python snapshot 1`] = `
" TagMutability <a name=\\"TagMutability\\"></a>

The tag mutability setting for your repository.

# \`MUTABLE\` <a name=\\"aws_cdk.aws_ecr.TagMutability.MUTABLE\\"></a>

allow image tags to be overwritten.

---


# \`IMMUTABLE\` <a name=\\"aws_cdk.aws_ecr.TagMutability.IMMUTABLE\\"></a>

all image tags within the repository will be immutable which will prevent them from being overwritten.

---

"
`;

exports[`typescript json snapshot 1`] = `
Object {
  "docs": "The tag mutability setting for your repository.",
  "members": Array [
    Object {
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "allow image tags to be overwritten.",
      "id": "@aws-cdk/aws-ecr.TagMutability.MUTABLE",
      "name": "MUTABLE",
    },
    Object {
      "deprecated": false,
      "deprecationReason": undefined,
      "docs": "all image tags within the repository will be immutable which will prevent them from being overwritten.",
      "id": "@aws-cdk/aws-ecr.TagMutability.IMMUTABLE",
      "name": "IMMUTABLE",
    },
  ],
  "name": "TagMutability",
}
`;

exports[`typescript markdown snapshot 1`] = `
" TagMutability <a name=\\"TagMutability\\"></a>

The tag mutability setting for your repository.

# \`MUTABLE\` <a name=\\"@aws-cdk/aws-ecr.TagMutability.MUTABLE\\"></a>

allow image tags to be overwritten.

---


# \`IMMUTABLE\` <a name=\\"@aws-cdk/aws-ecr.TagMutability.IMMUTABLE\\"></a>

all image tags within the repository will be immutable which will prevent them from being overwritten.

---

"
`;
